Grease Pencil point pressure max value too low #64936

Closed
opened 2019-05-21 12:05:19 +02:00 by Robert Juricek · 5 comments

System Information
Operating system: Any
Graphics card: Not related

Blender Version
Broken: 2.80, any

Short description of error
Grease Pencil Point property "pressure" has max. value 1. This applies when accessing from python. With Sculpt Mode, you can get much larger values.
If it's acceptable solution, it should be enough to increase the max value in the function rna_def_gpencil_stroke_point, file source/blender/makesrna/intern/rna_gpencil.c.

Exact steps for others to reproduce the error
Draw simple Grease Pencil line.
Switch to Sculpt Mode.
Select Thickness brush.
Make the line thick.
Switch to Scripting and run this code:

  point = bpy.data.grease_pencils[0].layers[0].frames[0].strokes[0].points[0]
  print(point.pressure) # prints for example 15.351
  point.pressure = 10
  print(point.pressure) # prints 1, you can also see the change in the 3d view; if my fix is applied, this line prints 10.0

grease-bug.blend

**System Information** Operating system: Any Graphics card: Not related **Blender Version** Broken: 2.80, any **Short description of error** Grease Pencil Point property "pressure" has max. value 1. This applies when accessing from python. With Sculpt Mode, you can get much larger values. If it's acceptable solution, it should be enough to increase the max value in the function rna_def_gpencil_stroke_point, file source/blender/makesrna/intern/rna_gpencil.c. **Exact steps for others to reproduce the error** Draw simple Grease Pencil line. Switch to Sculpt Mode. Select Thickness brush. Make the line thick. Switch to Scripting and run this code: ``` point = bpy.data.grease_pencils[0].layers[0].frames[0].strokes[0].points[0] print(point.pressure) # prints for example 15.351 point.pressure = 10 print(point.pressure) # prints 1, you can also see the change in the 3d view; if my fix is applied, this line prints 10.0 ``` [grease-bug.blend](https://archive.blender.org/developer/F7056261/grease-bug.blend)
Author

Added subscriber: @rooobertek

Added subscriber: @rooobertek
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Antonio Vazquez was assigned by Philipp Oeser 2019-05-21 12:20:48 +02:00
Member

@antoniov: sounds reasonable (but not sure)?

note this should then also be modified in rna_def_gpencil_stroke_points_api...

@antoniov: sounds reasonable (but not sure)? note this should then also be modified in `rna_def_gpencil_stroke_points_api`...

This issue was referenced by a25b8f531a

This issue was referenced by a25b8f531a7abab33fdbe9beedcfe53cc1132c0a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64936
No description provided.