Fix T64936: Grease Pencil point pressure max value too low

The API had an old  limit of 1.0f.